--- a/jsf_main/web/layout.xhtml
+++ b/jsf_main/web/layout.xhtml
@@ -10,7 +10,7 @@
     <title><ui:insert name="title">Название по умолчанию</ui:insert></title>
 </h:head>
 <h:body>
-    <h:link value="Create a operation" outcome="index.xhtml"/>
+    <!--<h:link value="Create a operation" outcome="index.xhtml"/>-->
     <h1><ui:insert name="title">Заголовок по умолчанию</ui:insert></h1>
     <hr/>
     <h:messages id="errors" infoStyle="color:blue" warnStyle="color:orange"
@@ -18,6 +18,7 @@
     <!--<p><p:messages/></p>-->
     <ui:insert name="content">Содержимое по умолчанию</ui:insert>
     <hr/>
+    <ui:insert name="footer">default footer</ui:insert>
     <!--<h:outputText value="APress — Изучаем Java EE 7" style="font-style:italic"/>-->
 </h:body>
 </html>
