--- a/jsf_main/web/form_categoryList.xhtml
+++ b/jsf_main/web/form_categoryList.xhtml
@@ -17,7 +17,7 @@
     </ui:define>
 
     <ui:define name="content">
-        <h:form id="form" style="width: 100%;height: 100%">
+        <h:form id="form">
             <!--<p:dataTable value="#{accEJB.getCategoryList()}" var="category" type="ordered"-->
                         <!--selection="#{viewController.selectedCategory}" selectionMode="single" rowKey="#{category.id}">-->
                 <!--<p:ajax event="rowSelect" listener="#{viewController.onRowSelect}" />-->
@@ -38,9 +38,9 @@
             <!--</p:dataTable>-->
                 <p:treeTable value="#{viewController.root}" var="category" type="ordered"
                              selection="#{viewController.selectedNode}" selectionMode="single"
-                             rowKey="#{category.id}">
+                             rowKey="#{category.id}" style="width: 100%;height: 100%">
                 <!--<p:ajax event="select" listener="#{viewController.onNodeSelect}" />-->
-                <p:column headerText="id" visible="false" width="35">
+                <p:column headerText="id" visible="false" style="width: 35">
                     <h:outputText value="#{category.id}"/>
                 </p:column>
                 <p:column headerText="name">
