--- a/jsf_main/web/form_layout.xhtml
+++ b/jsf_main/web/form_layout.xhtml
@@ -10,7 +10,7 @@
     <title><ui:insert name="title">Название по умолчанию</ui:insert></title>
 </h:head>
 <h:body>
-    <h:form id="content" style="width: 100%;height: 100%">
+    <h:form id="content">
     <!--<h:link value="Create a operation" outcome="index.xhtml"/>-->
     <!--<h1><ui:insert name="title">Заголовок по умолчанию</ui:insert></h1>-->
     <!--<h:form id="toolbar">-->
