--- a/jsf_main/web/layout_main.xhtml
+++ b/jsf_main/web/layout_main.xhtml
@@ -18,7 +18,7 @@
         <ui:insert name="content">Default content</ui:insert>
 
         <p:stack icon="/resources/stack.png" expanded="true">
-            <p:menuitem value="Home" icon="/resources/home.png" url="#"/>
+            <p:menuitem value="Home" icon="/resources/home.png" url="index.xhtml"/>
             <p:menuitem value="Import" icon="/resources/import.png" url="form_import.xhtml"/>
         </p:stack>
     </h:form>
